# conman

./: Cargo.toml  PKGBUILD  TEST
completions/: conman.bash  conman.fish  conman.zsh
hooks/: conman-install.hook  conman-remove.hook
src/: cli.rs  lib.rs  tui.rs
