[package]
name = "conman"
version = "0.1.0"
edition = "2024"
default-run = "conman"

[dependencies]
alpm = "5.0.2"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
homedir = "0.3.6"
rand = "0.10.2"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
